--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quizserver",
   "version": "1.0.0",
-  "description": "Delicious-Shop",
+  "description": "quiz",
   "engines": {
     "node": "8.9.x"
   },
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/HollyBang/Quiz-app.git"
   },
   "keywords": [
     "node",
